[gd_scene load_steps=5 format=3 uid="uid://dlqaropgctsnq"]

[ext_resource type="Script" path="res://tutorial-system/video-based/battle_tutorial.gd" id="1_2r73j"]
[ext_resource type="FontFile" uid="uid://c0j3jst85cjsx" path="res://assets/fonts/pixelmplus/PixelMplus12-Regular.ttf" id="2_fi0no"]
[ext_resource type="FontFile" uid="uid://cbcrd6cct3w7v" path="res://assets/fonts/pixelmplus/BestTen-DOT.otf" id="3_pq73s"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_b0g3e"]
file = "res://assets/videos/Battle_Tutorial.ogg"

[node name="BattleTutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2r73j")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.188235, 1, 1, 1)
layout_mode = 0
offset_left = 974.0
offset_top = 331.0
offset_right = 1547.0
offset_bottom = 687.0

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -338.0
offset_top = 217.0
offset_right = 338.0
offset_bottom = 275.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_fi0no")
theme_override_font_sizes/font_size = 64
text = "Battle Tutorial"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -616.0
offset_top = 336.0
offset_right = 2.0
offset_bottom = 880.0
grow_horizontal = 2
theme_override_constants/line_separation = 80
theme_override_fonts/normal_font = ExtResource("2_fi0no")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "To attack enemies:
  Basic Attack: [color=red]Press J[/color]
  Change Weapon Mode:
  [color=red]Press Z [/color] to switch to Melee Mode
  [color=red]Press X [/color] to switch to Ranged Mode"
autowrap_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_left = 974.0
offset_top = 337.0
offset_right = 1547.0
offset_bottom = 687.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
custom_minimum_size = Vector2(573, 350)
layout_mode = 2
stream = SubResource("VideoStreamTheora_b0g3e")
autoplay = true
expand = true
loop = true

[node name="PauseBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1228.0
offset_top = 697.0
offset_right = 1316.0
offset_bottom = 741.0
theme_override_fonts/font = ExtResource("3_pq73s")
theme_override_font_sizes/font_size = 32
text = "PAUSE"

[node name="CloseBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1566.0
offset_top = 180.0
offset_right = 1600.0
offset_bottom = 242.0
theme_override_fonts/font = ExtResource("3_pq73s")
theme_override_font_sizes/font_size = 48
text = "x"

[connection signal="pressed" from="PauseBtn" to="." method="_on_pause_play_btn_pressed"]
[connection signal="pressed" from="CloseBtn" to="." method="_on_close_btn_pressed"]
